--- a/manifest.json.in
+++ b/manifest.json.in
@@ -1,15 +1,15 @@
 {
     "name": "@APP_ID@",
-    "description": "System wide adblocker for ubuntu touch",
+    "description": "System wide adblocker for Ubuntu Touch",
     "architecture": "@CLICK_ARCH@",
     "title": "@APP_NAME@",
     "hooks": {
         "uAdBlock": {
-            "apparmor": "uAdBlock.apparmor",
-            "desktop": "uAdBlock.desktop"
+            "apparmor": "uAdBlockNG.apparmor",
+            "desktop": "uAdBlockNG.desktop"
         }
     },
-    "version": "0.4",
-    "maintainer": "Marius Gripsgard <marius@ubports.com>",
+    "version": "0.8",
+    "maintainer": "Lioh Moeller <lioh.moeller@gmx.net>",
     "framework": "ubuntu-sdk-16.04"
 }
