--- a/manifest.json.in
+++ b/manifest.json.in
@@ -11,5 +11,5 @@
     },
     "version": "1.1",
     "maintainer": "Lioh Moeller <lioh.moeller@gmx.net>",
-    "framework": "ubuntu-touch-24.04-1.x"
+    "framework": "@CLICK_FRAMEWORK@"
 }
